--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<title>To-Do List</title>
 <head>
     <h1>To-Do List</h1>
     <meta charset="UTF-8">
@@ -10,6 +11,7 @@
 <body>
     <input id="name" type="text">
     <button id="btn" class="button"> Submit</button>
+    <div id="todoListContainer" ></div>
     <script src="./index.js"></script>
 </body>
 </html>
