--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <title>To-Do List</title>
 <head>
@@ -13,5 +13,24 @@
     <button id="btn" class="button"> Submit</button>
     <div id="todoListContainer" ></div>
     <script src="./index.js"></script>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<title>To-Do List</title>
+<head>
+    <h1>To-Do List</h1>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+    <center>
+    <input id="name" type="text" value="">
+    <button id="btn" class="button"> Submit</button>
+    <div id="todoListContainer" ></div>
+    <script src="./index.js"></script>
+    </center>
 </body>
 </html>
